# grib2_wasm

./: .gitignore  README.md  package-lock.json  package.json  tsconfig.json  webpack.config.js
src/: app.ts  colors.ts  index.html  main.ts  wasm.worker.ts
wasm/: Cargo.toml
wasm/src/: lib.rs
