[package]
name = "grib2_wasm"
version = "0.1.0"
edition = "2021"
description = ""
repository = ""
license = "MIT"

[lib]
crate-type = ["cdylib"]

[profile.dev]
lto = false
panic = "unwind"
debug = true

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3.48"
console_error_panic_hook = "0.1.7"
grib2_reader = "0.1.1"
