[package]
name = "grib2_wasm"
version = "0.1.0"
edition = "2021"
description = ""
repository = ""
license = "MIT"

[lib]
crate-type = ["cdylib"]

[package.metadata.wasm-pack.profile.dev.wasm-bindgen]
dwarf-debug-info = true

[profile.dev]
lto = false
panic = "unwind"
debug = true

[dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1.7"
grib2_reader = "0.1.1"
